# Social-Media-WebProject

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
accounts/: urls.py  views.py
features/: create_post.feature  create_user_interaction.feature  edit_company.feature  edit_interaction.feature  edit_post.feature  edit_product.feature  environment.py  register_company.feature  register_product.feature  remove_company.feature  remove_interaction.feature  remove_post.feature  remove_product.feature
features/steps/: authentication.py  create_post.py  create_user_interaction.py  edit_company.py  edit_post.py  edit_product.py  register_company.py  register_product.py  remove_company.py  remove_interaction.py  remove_post.py  remove_product.py
social_media_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
social_media_app/migrations/: 0001_initial.py
social_media_project/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: api.js
templates/: base.html  brandcompany_form.html  company_confirm_delete.html  company_detail.html  company_edit.html  company_form.html  create_page.html  edit_page.html  form.html  home.html  interaction_confirm_delete.html  interaction_detail.html  interaction_form.html  post_confirm_delete.html  post_detail.html  post_edit.html  post_form.html  product_confirm_delete.html  product_detail.html  product_edit.html  product_form.html  trending.html
templates/registration/: login.html  signup.html
