[tool.poetry]
name = "social media webproject"
version = "0.1.0"
description = ""
authors = ["Dídac Cayuela <42339480+didicayu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
